# SMWhereami

./: CMakeLists.txt
Boo/: CMakeLists.txt  boo.cpp
source/: CMakeLists.txt  whereami.h
